[gd_scene load_steps=12 format=3 uid="uid://ddpbnambepqrb"]

[ext_resource type="Script" uid="uid://dqhhkiv58h61t" path="res://scripts/simulation_timer.gd" id="1_2450c"]
[ext_resource type="Script" uid="uid://b0tus4d4hqdl3" path="res://scripts/simulation_root.gd" id="1_dkgoo"]
[ext_resource type="PackedScene" uid="uid://bsndj5oidpmll" path="res://scenes/simulated_body.tscn" id="2_8gmc2"]
[ext_resource type="Script" uid="uid://c1s1nwxw6h3h0" path="res://scripts/motion_component.gd" id="3_flmh5"]
[ext_resource type="Script" uid="uid://ba4ykq1q6nlv1" path="res://scripts/motion_types/circular_motion.gd" id="4_jcsmn"]
[ext_resource type="PackedScene" uid="uid://b4v8vxh47bbma" path="res://scenes/arrow.tscn" id="5_6t1u3"]
[ext_resource type="PackedScene" uid="uid://bfvgwo2dk6kbt" path="res://scenes/camera_pivot.tscn" id="6_2pett"]
[ext_resource type="PackedScene" uid="uid://jvn64oarwma5" path="res://scenes/grid_visualizer.tscn" id="7_uexbu"]
[ext_resource type="Script" uid="uid://610ql0iqxxyj" path="res://scripts/input_panel.gd" id="8_1qvc6"]
[ext_resource type="Script" uid="uid://biyaj262r27qg" path="res://scripts/results_panel.gd" id="9_5kiiv"]

[sub_resource type="Resource" id="Resource_etu73"]
script = ExtResource("4_jcsmn")
radius = 0.0
rotational_frequency = 0.0

[node name="World2" type="Node3D"]
script = ExtResource("1_dkgoo")
motion_type = "CircularMotion"

[node name="CameraPivot" parent="." instance=ExtResource("6_2pett")]

[node name="SimulationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
script = ExtResource("1_2450c")

[node name="SimulatedBody" parent="." instance=ExtResource("2_8gmc2")]

[node name="MotionComponent" type="Node" parent="SimulatedBody" node_paths=PackedStringArray("timer", "target", "arrow")]
script = ExtResource("3_flmh5")
timer = NodePath("../../SimulationTimer")
target = NodePath("..")
motion = SubResource("Resource_etu73")
arrow = NodePath("../Arrow")

[node name="Arrow" parent="SimulatedBody" instance=ExtResource("5_6t1u3")]

[node name="Grid" parent="." node_paths=PackedStringArray("target") instance=ExtResource("7_uexbu")]
target = NodePath("../SimulatedBody")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InputPanel" type="Panel" parent="UI"]
offset_left = 50.0
offset_top = 50.0
offset_right = 536.0
offset_bottom = 421.0
script = ExtResource("8_1qvc6")
inputs = Dictionary[StringName, NodePath]({
&"radius": NodePath("MarginContainer/VBoxContainer/CoordinateParameter/Radius"),
&"rotational_frequency": NodePath("MarginContainer/VBoxContainer/VelocityParameter/RotationalFrequency")
})

[node name="MarginContainer" type="MarginContainer" parent="UI/InputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InputPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CoordinateParameter" type="HBoxContainer" parent="UI/InputPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/InputPanel/MarginContainer/VBoxContainer/CoordinateParameter"]
layout_mode = 2
size_flags_horizontal = 3
text = "Радиус"

[node name="Radius" type="SpinBox" parent="UI/InputPanel/MarginContainer/VBoxContainer/CoordinateParameter"]
layout_mode = 2
step = 0.01
suffix = "м"
select_all_on_focus = true

[node name="VelocityParameter" type="HBoxContainer" parent="UI/InputPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/InputPanel/MarginContainer/VBoxContainer/VelocityParameter"]
layout_mode = 2
size_flags_horizontal = 3
text = "Частота вращения
"

[node name="RotationalFrequency" type="SpinBox" parent="UI/InputPanel/MarginContainer/VBoxContainer/VelocityParameter"]
layout_mode = 2
min_value = -100.0
step = 0.01
suffix = "с⁻¹"
select_all_on_focus = true

[node name="AccelerationParameter" type="HBoxContainer" parent="UI/InputPanel/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/InputPanel/MarginContainer/VBoxContainer/AccelerationParameter"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ускорение"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/InputPanel/MarginContainer/VBoxContainer/AccelerationParameter"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="X" type="SpinBox" parent="UI/InputPanel/MarginContainer/VBoxContainer/AccelerationParameter/HBoxContainer"]
layout_mode = 2
min_value = -100.0
step = 0.01
suffix = "м/с²"
select_all_on_focus = true
metadata/_edit_use_anchors_ = true

[node name="Y" type="SpinBox" parent="UI/InputPanel/MarginContainer/VBoxContainer/AccelerationParameter/HBoxContainer"]
layout_mode = 2
min_value = -100.0
step = 0.01
suffix = "м/с²"
select_all_on_focus = true
metadata/_edit_use_anchors_ = true

[node name="Z" type="SpinBox" parent="UI/InputPanel/MarginContainer/VBoxContainer/AccelerationParameter/HBoxContainer"]
layout_mode = 2
min_value = -100.0
step = 0.01
suffix = "м/с²"
select_all_on_focus = true
metadata/_edit_use_anchors_ = true

[node name="TimeParameter" type="HBoxContainer" parent="UI/InputPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="UI/InputPanel/MarginContainer/VBoxContainer/TimeParameter"]
layout_mode = 2
size_flags_horizontal = 3
text = "Время"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/InputPanel/MarginContainer/VBoxContainer/TimeParameter"]
layout_mode = 2
metadata/_edit_group_ = true

[node name="Time" type="SpinBox" parent="UI/InputPanel/MarginContainer/VBoxContainer/TimeParameter/HBoxContainer"]
layout_mode = 2
step = 0.01
value = 5.0
suffix = "с"
select_all_on_focus = true
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="UI/InputPanel/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
toggle_mode = true
text = "Начать"

[node name="PauseButton" type="Button" parent="UI/InputPanel/MarginContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
toggle_mode = true
text = "Пауза"

[node name="ResultsPanel" type="Panel" parent="UI" node_paths=PackedStringArray("time_label", "timer")]
offset_left = 50.0
offset_top = 487.0
offset_right = 536.0
offset_bottom = 779.0
script = ExtResource("9_5kiiv")
time_label = NodePath("MarginContainer/VBoxContainer/TimeResult/Value")
timer = NodePath("../../SimulationTimer")
displayed_properties = Dictionary[NodePath, StringName]({
NodePath("MarginContainer/VBoxContainer/CoordResult/Value"): &"_coordinate",
NodePath("MarginContainer/VBoxContainer/VelocityResult/Value"): &"_linear_velocity",
NodePath("MarginContainer/VBoxContainer/AngularVelocityResult/Value"): &"angular_velocity",
NodePath("MarginContainer/VBoxContainer/AngleResult/Value"): &"angle_degrees",
NodePath("MarginContainer/VBoxContainer/RevolutionsResult/Value"): &"number_of_revolutions",
NodePath("MarginContainer/VBoxContainer/DistanceResult/Value"): &"_distance"
})
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="UI/ResultsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ResultsPanel/MarginContainer"]
layout_mode = 2

[node name="CoordResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/CoordResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Координата (м)"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/CoordResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VelocityResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/VelocityResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Линейная скорость (м/с)
"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/VelocityResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AngularVelocityResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/AngularVelocityResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Угловая скорость (рад/с)"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/AngularVelocityResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DistanceResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/DistanceResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Путь (м)"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/DistanceResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RevolutionsResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/RevolutionsResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Число оборотов"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/RevolutionsResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AngleResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/AngleResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Угол поворота (градусы)"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/AngleResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeResult" type="Control" parent="UI/ResultsPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Name" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/TimeResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Истекшее время (с)"

[node name="Value" type="Label" parent="UI/ResultsPanel/MarginContainer/VBoxContainer/TimeResult"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="simulation_started" from="UI/InputPanel" to="SimulatedBody/MotionComponent" method="set_state"]
[connection signal="simulation_started" from="UI/InputPanel" to="UI/ResultsPanel" method="set_state"]
[connection signal="simulation_stopped" from="UI/InputPanel" to="SimulationTimer" method="reset"]
[connection signal="timer_updated" from="UI/InputPanel" to="SimulationTimer" method="start_timer"]
[connection signal="value_changed" from="UI/InputPanel/MarginContainer/VBoxContainer/AccelerationParameter/HBoxContainer/Z" to="CameraPivot" method="_on_z_value_changed"]
[connection signal="toggled" from="UI/InputPanel/MarginContainer/StartButton" to="UI/InputPanel" method="toggle_simulation"]
[connection signal="toggled" from="UI/InputPanel/MarginContainer/PauseButton" to="SimulationTimer" method="pause"]
